syntax = "proto3";

package aleapb.agreementpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/aleapb/agreementpb";

import "mir/plugin.proto";


// ============================================================
// Events
// ============================================================

message Event {
    oneof type {
        option (mir.event_type) = true;

        RequestInput request_input = 1;
        InputValue   input_value   = 2;
        Deliver      deliver       = 3;
    }
}

message RequestInput {
    uint64 round = 1;
}

message InputValue {
    uint64 round = 1;
    bool input = 2;
}

message Deliver {
    uint64 round    = 1;
    bool   decision = 2;
}